# buildchain

./: .gitignore  README.md  pyproject.toml
buildchain/: __main__.py  cli.py  libc.py  patches.py
