[project]
name = "buildchain"
version = "0.1.0"
description = "A sample Python project"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["sample", "setuptools", "development"]
authors = [
  { name = "clitic", email = "clitic21@gmail.com" }
]
classifiers = [ # https://pypi.org/classifiers
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/clitic/buildchain"
"Bug Reports" = "https://github.com/clitic/buildchain/issues"
"Funding" = "https://www.buymeacoffee.com/clitic"
"Source" = "https://github.com/clitic/buildchain"

[project.scripts]
buildchain = "buildchain:__main__.main"
